--- a/baselibrary/src/main/res/layout/progress_dialog.xml
+++ b/baselibrary/src/main/res/layout/progress_dialog.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_progress"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
+   <!-- <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true" />-->
+
+    <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:trailingcircular_animDelay="200"
+        app:trailingcircular_animDuration="1200"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/progressBar"
+        android:layout_centerVertical="true"
+        app:trailingcircular_bigCircleRadius="20dp"
+        app:trailingcircular_dotsRadius="5dp"
+        app:trailingcircular_noOfTrailingDots="5" />
 
 </RelativeLayout>
